syntax = "proto3";

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
  rpc GetOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string order_id = 1;
  string productId = 2;  // Change this to product_id to be consistent
  int32 quantity = 3;
  string order_date = 4;
}

message OrderResponse {
  string order_id = 1;
  string productId = 2;  // Change this to product_id to be consistent
  int32 quantity = 3;
  string order_date = 4;
}
