syntax = "proto3";

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
  rpc UpdateStock (StockUpdateRequest) returns (StockUpdateResponse);
}

message ProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  float price = 3;
  int32 stock = 4;
}

message StockUpdateRequest {
  string id = 1;
  int32 quantity = 2;
}

message StockUpdateResponse {
  bool success = 1;
}
